<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:orientation="vertical"
    android:layout_marginTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:paddingBottom="32dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/defaultprofile"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/editProfTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_to_change_photo"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:layout_margin="16dp"
            android:id="@+id/btnTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CHANGE THEME" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/fullname"

                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:errorEnabled="true"
            android:enabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/email"

                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_pass_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="textPassword"

                android:password="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEditProf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/sp_rectangel_root"
            android:text="@string/edit_profile"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBackProf"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/sp_rectangel_root"
            android:text="@string/back" />


    </LinearLayout>
</ScrollView>