<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".EditKostActivity"
    android:id="@+id/containerAddKost">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <ImageView
            android:layout_marginTop="35dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icon"
            android:layout_gravity="center" >
        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/namaKos_layout"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kost_name"
                android:layout_width="match_parent"
                android:hint="@string/kost_name"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_Layout"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressKost"
                android:layout_width="match_parent"
                android:hint="@string/kost_address"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/type_Layout"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:helperText="Kost Type">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radioGroupXML">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text="@string/eksklusif"
                    android:id="@+id/radioEks"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radioReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reguler"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kota_layout"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SizeKost"
                android:layout_width="match_parent"
                android:hint="@string/land_size"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sisa_layout"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sisa_kamar"
                android:layout_width="match_parent"
                android:hint="@string/sisa_kamar"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/uploadBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Image Camera"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="15dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/uploadGalery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Image Galery"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editKostBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/sp_button"
            android:text="@string/edit_kost"></com.google.android.material.button.MaterialButton>
    </LinearLayout>
</ScrollView>